$Id$

WARNING: Extra debug logging enabled for checking internet news dupes.
         This will just make bigger logfiles if you gate news.
	 Since 28-08-2002 mbfido news produces real big logs!!
	 Extra debug logging will be removed around 14 Oct 2002.

NOTE:	 Areas security editing is present but doesn't do anything yet.
	 Work in progress!

				MBSEBBS History.


v0.35.04	29-Sep-2002

	general:

	upgrade:
		Start mbsetup, enter global configuration and exit and save.
		This will set defaults for area-/filemgr logging and security.
		The noderecords are updated with new security flags.
		The filegroups, ticgroups, tic areas and message areas are 
		updated with default security flags.

        clcomm.a:
                Added Mgrlog function, logs default to manager.log. Does also
                log to Syslog with level '+'.

	mbfido:
		Area- and FileMgr requests are now also logged in manager.log
                Auto created and removed areas are also logged in manager.log
		Auto created area now get the link security from the group.
		With message areas auto update it should now only delete
		missing echomail areas.
		File attaches to our own points were placed in the node's
		outbound directory instead of the point outbound.

	mbsetup:
		Added setup for the nodes record for security flags.
                Added setup for the ticgroups default security flags.
		Added setup for the mailgroups default security flags.
		Added setup for the tic areas security flags.
		Added setup for the message areas security flags.
		Menu 14, edit files database had the wrong selection prompt.


v0.35.03	06-Jul-2002 - 29-Sep-2002

	general:
		Now compiles and installs on HP-PARISC hardware, tested with
		Debian 3.0 on a HP 712/80.

	upgrade:
		After installation restart mbtask.
		Start mbsetup, enter global configuration and exit and save.
		This will setup the new outbound queue path, default is
		/opt/mbse/var/queue.

	common.a: