@@ -5,8 +5,6 @@ WARNING: Extra debug logging enabled for checking internet news dupes.
 	 Since 28-08-2002 mbfido news produces real big logs!!
 	 Extra debug logging will be removed around 14 Oct 2002.
 
-NOTE:	 Areas security editing is present but doesn't do anything yet.
-	 Work in progress!
 
 				MBSEBBS History.
 
@@ -14,6 +12,7 @@ NOTE:	 Areas security editing is present but doesn't do anything yet.
 v0.35.04	29-Sep-2002
 
 	general:
+		Added mail and files security flags for nodes.
 
 	upgrade:
 		Start mbsetup, enter global configuration and exit and save.
@@ -34,6 +33,8 @@ v0.35.04	29-Sep-2002
 		missing echomail areas.
 		File attaches to our own points were placed in the node's
 		outbound directory instead of the point outbound.
+		Files and echomail security flags implemented.
+		Echomail rescan will also work with newsgroups.
 
 	mbsetup:
 		Added setup for the nodes record for security flags.
